Fix overflow issue on mobile

--- a/src/app/examples/profile/profile.component.scss
+++ b/src/app/examples/profile/profile.component.scss
@@ -22,3 +22,7 @@
   width: 96px;
   background: rgba(0,0,0,.54);
 }
+
+.overflow-wrapper {
+  overflow-x: hidden;
+}
